--- a/Ndktest2/app/src/main/res/layout/activity_main.xml
+++ b/Ndktest2/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/custom_view"/>
-    <!--ImageView
+
+    <!--Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_facedetection"
+        android:text="shutter"/>
+    <ImageView
         android:id="@+id/image_view"
         android:layout_weight="1"
         android:layout_width="match_parent"
